# AWSault

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/awsault/: __init__.py  __main__.py  cli.py  services.py
src/awsault/core/: creds.py  scanner.py  store.py
src/awsault/output/: formatters.py
src/awsault/recon/: audit.py  deep.py  loot.py  suggestions.py
